# csound-vst3

./: .gitignore  README.md
.github/workflows/: build-and-release.yml
CsoundVST3/: CMakeLists.txt  clean-build-linux.bash  clean-build-macos.bash  clean-build-windows.bash  codesign-check.bash  install.sh  notarize_staged_artifacts.sh  rebuild.sh
CsoundVST3/Builds/MacOSX/: CsoundVST.csd  CsoundVST3.csd  Xanadu.csd
CsoundVST3/Builds/MacOSX/Examples/: CsoundVST3.csd  CsoundVST3AudioIn.csd  Xanadu.csd
CsoundVST3/Resources/Examples/: CsoundVST3-test.RPP  CsoundVST3MidiOut.csd
CsoundVST3/Source/: AboutDialog.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  csound_threaded.hpp  csoundvst3_version.h
CsoundVST3/cmake/: FetchCsoundACCsoundThreaded.cmake  notarize-macos-dist.bash  postbuild-sign-macos-bundle.bash  rewrite-csound-macos-dylib-ref.bash  sign-macos-dist.bash
build-macos/: .ninja_deps  .ninja_log  CMakeCache.txt  Standalone_Info.plist  VST3_Info.plist  build.ninja  cmake_install.cmake  install_manifest_CsoundVST3_Runtime.txt  juce_vst3_helper
build-macos/CsoundVST3_artefacts/JuceLibraryCode/: Info.txt
build-macos/CsoundVST3_artefacts/JuceLibraryCode/CsoundVST3_AU/: Info.plist
build-macos/CsoundVST3_artefacts/JuceLibraryCode/CsoundVST3_Standalone/: Info.plist
build-macos/CsoundVST3_artefacts/JuceLibraryCode/CsoundVST3_VST3/: Info.plist
build-macos/CsoundVST3_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
build-macos/CsoundVST3_artefacts/RelWithDebInfo/AU/CsoundVST3.component/Contents/: Info.plist
build-macos/CsoundVST3_artefacts/RelWithDebInfo/AU/CsoundVST3.component/Contents/Frameworks/CsoundLib64.framework/Headers/: csdl.h
build-macos/CsoundVST3_artefacts/RelWithDebInfo/AU/CsoundVST3.component/Contents/Frameworks/Versions/7.0/Headers/: csoundCore.h
build-macos/CsoundVST3_artefacts/RelWithDebInfo/AU/CsoundVST3.component/Contents/Frameworks/Versions/7.0/Resources/: Info.plist
build-macos/CsoundVST3_artefacts/RelWithDebInfo/AU/CsoundVST3.component/Contents/Frameworks/Versions/Current/Headers/: csound_compiler.h
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/: Info.plist
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/Frameworks/CsoundLib64.framework/Headers/: ugen.h
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/Frameworks/CsoundLib64.framework/Versions/Current/Headers/: csound_circular_buffer.h  csound_type_system.h  float-version.h
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/Frameworks/Headers/: sysdep.h
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/Frameworks/Versions/7.0/: CsoundLib64
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/Frameworks/Versions/7.0/Headers/: coreDefs.h  csound.h
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/Resources/: angel_concert.icns  moduleinfo.json
build-macos/CsoundVST3_artefacts/RelWithDebInfo/VST3/CsoundVST3.vst3/Contents/_CodeSignature/: CodeResources
build-macos/JUCE/: JUCEExportConfig.cmake  cmake_install.cmake
build-macos/JUCE/modules/: cmake_install.cmake
build-macos/JUCE/tools/: .ninja_deps  .ninja_log  CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  build.ninja  cmake_install.cmake
build-macos/JUCE/tools/modules/: cmake_install.cmake
build-macos/juce_binarydata_CsoundBinaryData/JuceLibraryCode/: BinaryData.h  input_file_list
